--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -74,9 +74,27 @@
     <Content Include="bin\SQLController.dll" />
     <Content Include="css\lemonade.css" />
     <Content Include="css\lemonade.min.css" />
+    <Content Include="css\style.css" />
     <Content Include="Error404.aspx" />
     <Content Include="ErrorG.aspx" />
+    <Content Include="Images\agenda.png" />
+    <Content Include="Images\cloud-computing.png" />
+    <Content Include="Images\icons.png" />
     <Content Include="Images\logo.jpg" />
+    <Content Include="Images\logo.png" />
+    <Content Include="Images\logo1.png" />
+    <Content Include="Images\logo2.png" />
+    <Content Include="Images\menu.svg" />
+    <Content Include="Images\microsoft.png" />
+    <Content Include="Images\profile-1.jpg" />
+    <Content Include="Images\profile-2.jpg" />
+    <Content Include="Images\profile-3.jpg" />
+    <Content Include="Images\profile-4.jpg" />
+    <Content Include="Images\profile-5.jpg" />
+    <Content Include="Images\profile-6.jpg" />
+    <Content Include="Images\stats.png" />
+    <Content Include="Images\windows-phone.png" />
+    <Content Include="Images\windows.png" />
     <Content Include="Konto\Default.aspx" />
     <Content Include="Admin\Admin.master" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
@@ -84,6 +102,7 @@
     <Content Include="PermissionDenied.aspx" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
+    <Content Include="Scripts\jquery.lazyload.js" />
     <Content Include="Site.master" />
     <Content Include="packages.config" />
     <Content Include="Site.Mobile.Master" />
