Fixed some responsive css and svg support

--- a/JITADWeb/Web.config
+++ b/JITADWeb/Web.config
@@ -25,5 +25,9 @@
       <remove statusCode="404"/>
       <error statusCode="404" path="/Error404" responseMode="ExecuteURL"/>
     </httpErrors>
+  <staticContent>
+       <remove fileExtension=".svg" />
+       <mimeMap fileExtension=".svg" mimeType="image/svg+xml"  />
+    </staticContent>
   </system.webServer>
 </configuration>
