--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -100,6 +100,7 @@
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Konto\webauth.aspx" />
     <Content Include="PermissionDenied.aspx" />
+    <Content Include="Scripts\datetime.1-3.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jquery.lazyload.js" />
