Forced HTTPS in web.config

--- a/JITADWeb/Web.config
+++ b/JITADWeb/Web.config
@@ -25,7 +25,18 @@
       <remove statusCode="404"/>
       <error statusCode="404" path="/Error404" responseMode="ExecuteURL"/>
     </httpErrors>
-  <staticContent>
+     <rewrite>
+      <rules>
+        <rule name="Force HTTPS" enabled="true">
+          <match url="(.*)" ignoreCase="false" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+    <staticContent>
        <remove fileExtension=".svg" />
        <mimeMap fileExtension=".svg" mimeType="image/svg+xml"  />
     </staticContent>
