--- a/JITADWeb/Web.config
+++ b/JITADWeb/Web.config
@@ -28,9 +28,10 @@
      <rewrite>
       <rules>
         <rule name="Force HTTPS" enabled="true">
-          <match url="(.*)" ignoreCase="false" />
+          <match url="Konto/(.*)" ignoreCase="false" />
           <conditions>
             <add input="{HTTPS}" pattern="off" />
+            <add input="http://{HTTP_HOST}/" pattern="off"/>
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
         </rule>
