Fixed HTTPS force regex

--- a/JITADWeb/Web.config
+++ b/JITADWeb/Web.config
@@ -28,10 +28,9 @@
      <rewrite>
       <rules>
         <rule name="Force HTTPS" enabled="true">
-          <match url="Konto/(.*)" ignoreCase="false" />
+          <match url="^((Konto|Admin)/.*)$" />
           <conditions>
             <add input="{HTTPS}" pattern="off" />
-            <add input="http://{HTTP_HOST}/" pattern="off"/>
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
         </rule>
