Still fighting the https...

--- a/JITADWeb/Web.config
+++ b/JITADWeb/Web.config
@@ -27,7 +27,7 @@
     </httpErrors>
      <rewrite>
       <rules>
-        <rule name="Force HTTPS" enabled="true">
+        <rule name="Force HTTPS" enabled="true" stopProcessing="true">
           <match url="^((Konto|Admin)/.*)$" />
           <conditions>
             <add input="{HTTPS}" pattern="off" />
