--- a/JITADWeb/packages.config
+++ b/JITADWeb/packages.config
@@ -3,4 +3,5 @@
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
 </packages>
