--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -97,6 +97,7 @@
     <Content Include="Images\logo_przezroczyste_svg.svg" />
     <Content Include="Images\logo_tlo.svg" />
     <Content Include="Images\logo_tlo_biale.svg" />
+    <Content Include="Images\map-pin.png" />
     <Content Include="Images\menu.svg" />
     <Content Include="Images\microsoft.png" />
     <Content Include="Images\person-blank.png" />
