Tidying up images

--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -82,32 +82,17 @@
     <Content Include="css\style.css" />
     <Content Include="Error404.aspx" />
     <Content Include="ErrorG.aspx" />
-    <Content Include="Images\agenda.png" />
     <Content Include="Images\cloud-computing.png" />
     <Content Include="Images\icons.png" />
-    <Content Include="Images\janusz-jablonowski.jpg" />
-    <Content Include="Images\kamil-stachowicz.png" />
-    <Content Include="Images\logo.jpg" />
     <Content Include="Images\logo.png" />
-    <Content Include="Images\logo1.png" />
-    <Content Include="Images\logo2.png" />
-    <Content Include="Images\logo3.png" />
-    <Content Include="Images\logo_bez_tekstu.svg" />
-    <Content Include="Images\logo_exertum.jpg" />
-    <Content Include="Images\logo_przezroczyste_svg.svg" />
-    <Content Include="Images\logo_tlo.svg" />
-    <Content Include="Images\logo_tlo_biale.svg" />
+    <Content Include="Images\logo.svg" />
     <Content Include="Images\map-pin.png" />
-    <Content Include="Images\menu.svg" />
-    <Content Include="Images\microsoft.png" />
-    <Content Include="Images\person-blank.png" />
-    <Content Include="Images\profile-1.jpg" />
-    <Content Include="Images\profile-2.jpg" />
-    <Content Include="Images\profile-3.jpg" />
-    <Content Include="Images\profile-4.jpg" />
-    <Content Include="Images\profile-5.jpg" />
-    <Content Include="Images\profile-6.jpg" />
-    <Content Include="Images\ryszard-dalkowski.jpg" />
+    <Content Include="Images\partnerzy\logo_exertum.jpg" />
+    <Content Include="Images\partnerzy\microsoft.png" />
+    <Content Include="Images\prelegenci\janusz-jablonowski.jpg" />
+    <Content Include="Images\prelegenci\kamil-stachowicz.png" />
+    <Content Include="Images\prelegenci\person-blank.png" />
+    <Content Include="Images\prelegenci\ryszard-dalkowski.jpg" />
     <Content Include="Images\stats.png" />
     <Content Include="Images\windows-phone.png" />
     <Content Include="Images\windows.png" />
