--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -84,10 +84,11 @@
     <Content Include="ErrorG.aspx" />
     <Content Include="Images\cloud-computing.png" />
     <Content Include="Images\icons.png" />
+    <Content Include="Images\juniornetuw.png" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\logo.svg" />
     <Content Include="Images\map-pin.png" />
-    <Content Include="Images\partnerzy\logo_exertum.jpg" />
+    <Content Include="Images\partnerzy\exertum.jpg" />
     <Content Include="Images\partnerzy\microsoft.png" />
     <Content Include="Images\prelegenci\janusz-jablonowski.jpg" />
     <Content Include="Images\prelegenci\kamil-stachowicz.png" />
