--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -109,6 +109,7 @@
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jquery.lazyload.js" />
+    <Content Include="Scripts\popup.js" />
     <Content Include="Site.master" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\jitad__draft.pubxml" />
