Redirect from www.* to *

--- a/JITADWeb/Web.config
+++ b/JITADWeb/Web.config
@@ -34,6 +34,10 @@
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
         </rule>
+        <rule name="Redirect from WWW" enabled="true" stopProcessing="true">
+          <match url="(www.*)$" />
+          <action type="Redirect" url="{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent"/>
+        </rule>
       </rules>
     </rewrite>
     <staticContent>
