--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -90,6 +90,7 @@
     <Content Include="Images\map-pin.png" />
     <Content Include="Images\partnerzy\exertum.jpg" />
     <Content Include="Images\partnerzy\microsoft.png" />
+    <Content Include="Images\prelegenci\dawid-chroscielski.JPG" />
     <Content Include="Images\prelegenci\janusz-jablonowski.jpg" />
     <Content Include="Images\prelegenci\kamil-stachowicz.png" />
     <Content Include="Images\prelegenci\person-blank.png" />
