--- a/JITADWeb/JITADWeb.csproj
+++ b/JITADWeb/JITADWeb.csproj
@@ -100,6 +100,7 @@
     <Content Include="Images\prelegenci\kamil-stachowicz.png" />
     <Content Include="Images\prelegenci\pawel-plawiak.jpg" />
     <Content Include="Images\prelegenci\person-blank.png" />
+    <Content Include="Images\prelegenci\przemek-galuszka.jpg" />
     <Content Include="Images\prelegenci\przemek-trzepla.jpg" />
     <Content Include="Images\prelegenci\ryszard-dalkowski.jpg" />
     <Content Include="Images\stats.png" />
